@@ -134,6 +134,7 @@ following names for their contribution to the product.
 * Nakon
 * Nathan Larson
 * nephele
+* Nik
 * Nikolaos S. Karastathis
 * Olaf Lenz
 * Paul Copperman
